新增 Minecraft 1.20.4 原生支持